--- a/src/components/Procesos/Procesos.css
+++ b/src/components/Procesos/Procesos.css
@@ -74,4 +74,12 @@
     width: 100%;
     margin-bottom: 2rem;
   }
+
+  .section h2 {
+    font-size: 2rem;
+  }
+
+  .section p {
+    font-size: 1rem;
+  }
 }
