--- a/src/components/Tentacion/Tentacion.css
+++ b/src/components/Tentacion/Tentacion.css
@@ -1,7 +1,8 @@
 /* Estilos para la sección de Video tentación */
 #tentate {
   padding: 6rem 2rem;
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
+  background-color: #d8d3c3;
   display: flex;
   justify-content: center;
   align-items: center;
