--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -21,7 +21,7 @@
 }
 
 .banner h1 {
-  font-size: 5rem; /* Título más grande */
+  font-size: 6rem;
   color: #d8d3c3;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
